--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
 server.port =8080
